Fixed bug with input group in firefox hiding when empty Fixed search not showing on load when nothing is selected but suggestions shown Put longer timeout on search Fixed jshint errors

--- a/app/components/input-group/index.css
+++ b/app/components/input-group/index.css
@@ -42,6 +42,10 @@
   vertical-align: middle;
 }
 
+.InputGroup-addon:before {
+  content: ' ';
+}
+
 .InputGroup.is-focused .InputGroup-input,
 .InputGroup.is-focused .InputGroup-addon {
   background-color: #fff;
